feat: добавлены новые компоненты для анимации выбора победителя, включая конфетти и слот-машину; улучшен интерфейс отображения результатов

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,8 +4,8 @@
   "description": "Random g'olib tanlash tizimi - Backend",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "dev": "nodemon server.js"
+    "start": "node --no-deprecation server.js",
+    "dev": "nodemon --no-deprecation server.js"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
